/*
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements.  See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
import "google/protobuf/wrappers.proto";

option java_multiple_files = true;
option java_package = "org.apache.openwhisk.grpc";
option java_outer_classname = "ControllerProto";

package controller;

service ControllerService {
  rpc GetInvocationRoute (GetInvocationRouteRequest) returns (GetInvocationRouteResponse) {}

  rpc UpdateClusterState (UpdateClusterStateRequest) returns (UpdateClusterStateResponse) {}
}

message GetInvocationRouteRequest {
  string actionName = 1;
}

message GetInvocationRouteResponse {
  string invokerHost = 1;
}

// map of invoker to its container states by the name of the invoker
// for instance, hello1 -> (ContainerStateLists object), hello2 -> (ContainerStateLists object)
message ActionStatePerInvoker {
  map<string, ActionState> actionStates = 1;
  uint64 freeMemoryMB = 2;
}

// map of container states to their counts
// for instance, free -> [{ "1bh123", "0,8" }, { "1243145", "1,9" }], busy -> [{ "df356", "2,10" }, { "j5yc", "3,11" }]
// these are per invoker and action
message ActionState {
  map<string, ContainerList> stateLists = 1;
}

message ContainerList {
  repeated Container containers = 1;
}

message Container {
  string id = 1;
  string core_pin = 2; // "0,8"
}

message ClusterState {
  // map of action to its invoker states by the name of the action
  // for instance, 1 -> (ActionStatePerInvoker object), 2 -> (ActionStatePerInvoker object)
  map<uint64, ActionStatePerInvoker> actionStatePerInvoker = 2;
}

message UpdateClusterStateRequest {
  ClusterState clusterState = 1;
}

message UpdateClusterStateResponse {}